<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="round_tip">Round up tip?</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount">Tip amount: %s</string>
</resources>