<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_store"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/store_image"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/cost_of_service"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/service_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_service"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no"
            />
        <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_question"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/service_image"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
            style="@style/Widget.TipCalculator.TextView"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:id="@+id/tip_options"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_twenty_percent"
                android:text="@string/amazing_service"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_eighteen_percent"
                android:text="@string/good_service" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_fifteen_percent"
                android:text="@string/okay_service" />

        </RadioGroup>

        <ImageView
            android:id="@+id/round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_up"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/round_tip"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/round_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            android:checked="true"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            android:text="@string/calculate"/>

        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            android:layout_marginTop="8dp"
            tools:text="Tip Amount $10"
            style="@style/Widget.TipCalculator.TextView"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>